--- a/content/replies/2021-05-20-06-21.md
+++ b/content/replies/2021-05-20-06-21.md
@@ -3,7 +3,8 @@ layout: reply
 tags:
   - reply
 title: "Reply to"
-url: https://www.petergoes.nl/blog/test-post-web-mentions/
+url: https://sia.codes/posts/webmentions-eleventy-in-depth/
 date: 2021-05-20T06:14:50.899Z
 ---
-This is a test reply 
+
+Thanks for the great write up!
