Update reply with author name

--- a/content/replies/2021-05-20-09-53.md
+++ b/content/replies/2021-05-20-09-53.md
@@ -3,7 +3,7 @@ layout: bookmark
 tags:
   - reply
 title: Reply to
-url: https://webmention.rocks/test/1
+url: https://webmention.rocks/test/1/
 date: 2021-05-20T09:52:29.962Z
 ---
 Test reply to webmention.rocks test 1
