notify bridgy per post instead of rss

--- a/content/replies/2021-05-31-19-18.md
+++ b/content/replies/2021-05-31-19-18.md
@@ -6,6 +6,7 @@ title: Reply to
 url: https://twitter.com/mmatuzo/status/1399430184479215616
 silo: twitter
 date: 2021-05-31T19:12:35.045Z
+tweetUrl: https://twitter.com/petergoes/status/1399445513372684293
 ---
 Maybe something like: Netlify forms -> Webhook notification -> Netlify Function stores it somewhere (firebase?) -> fetch all on build?
 
