Add syndication links to blog overview

--- a/content/notes/2021-05-30-22-23.md
+++ b/content/notes/2021-05-30-22-23.md
@@ -5,6 +5,6 @@ tags:
 title: Note
 date: 2021-05-30T22:22:41.431Z
 tweetUrl: https://twitter.com/petergoes/status/1399129637993824259
-mastodonUrl: https://toot.cafe/web/statuses/106326489425272456
+tootUrl: https://toot.cafe/web/statuses/106326489425272456
 ---
 Indieweb-ifying my site is a lot of fun, but it does take a lot of trial and error!! 
