--- a/content/replies/2021-06-05-18-56.md
+++ b/content/replies/2021-06-05-18-56.md
@@ -3,11 +3,12 @@ layout: reply
 tags:
   - reply
 title: Reply to
-url: <a href="https://webmention.rocks/test/1">Test 1</a>
+url: https://webmention.rocks/test/1
 silo:
   - indieweb
 date: 2021-06-05T18:56:04.689Z
 ---
+A bulk test post to webmention.rocks
 
 <a href="https://webmention.rocks/test/2">Test 2</a>
 <a href="https://webmention.rocks/test/3">Test 3</a>
