Display username in reply when on twitter

--- a/content/replies/2021-06-04-10-05.md
+++ b/content/replies/2021-06-04-10-05.md
@@ -5,6 +5,7 @@ tags:
 title: Reply to
 url: https://twitter.com/petervangrieken/status/1400483142859898884
 silo: twitter
+tweetUrl: https://twitter.com/petergoes/status/1400483680842362881
 date: 2021-06-03T16:05:11.433Z
 ---
 I really like them 😄 Nice colour, pretty vocal.
