--- a/content/replies/2021-06-05-18-56.md
+++ b/content/replies/2021-06-05-18-56.md
@@ -8,7 +8,7 @@ silo:
   - indieweb
 date: 2021-06-05T18:56:04.689Z
 ---
-A bulk test post to webmention.rocks
+A bulk test reply to webmention.rocks
 
 <a class="u-url" href="https://webmention.rocks/test/2">Test 2</a>
 <a class="u-url" href="https://webmention.rocks/test/3">Test 3</a>
