Update syndication urls

--- a/content/notes/2021-06-06-21-38.md
+++ b/content/notes/2021-06-06-21-38.md
@@ -3,8 +3,8 @@ layout: note
 tags:
   - note
 title: Note
-tweetUrl: ""
-tootUrl: ""
+tweetUrl: tweet/url
+tootUrl: tweet/url
 date: 2021-06-06T21:27:00.821Z
 ---
 A test note
