--- a/content/replies/2021-06-07-20-10.md
+++ b/content/replies/2021-06-07-20-10.md
@@ -5,6 +5,7 @@ tags:
 title: Reply to
 url: https://twitter.com/css/status/1401990471799513093?s=20
 silo: twitter
+tweetUrl: "https://twitter.com/petergoes/status/1401995613684776963?s=20"
 date: 2021-06-07T20:09:23.818Z
 ---
  Lots of accessibility links lately! Nice!
