Update syndication urls

--- a/content/replies/2021-06-07-20-45.md
+++ b/content/replies/2021-06-07-20-45.md
@@ -6,7 +6,7 @@ title: Reply to
 url: https://toot.cafe/web/statuses/106371367808513037
 silo: mastodon
 tweetUrl: ""
-tootUrl: ""
+tootUrl: "https://toot.cafe/@petergoes/106371401535067253"
 date: 2021-06-07T20:44:46.103Z
 ---
 test reply to a reply
