--- a/content/replies/2021-06-08-15-18.md
+++ b/content/replies/2021-06-08-15-18.md
@@ -5,7 +5,7 @@ tags:
 title: Reply to
 url: https://twitter.com/petervangrieken/status/1402256844865904641?s=20
 silo: twitter
-tweetUrl: ""
+tweetUrl: "https://twitter.com/petergoes/status/1402284346225135630"
 tootUrl: ""
 date: 2021-06-08T15:18:16.878Z
 ---
