--- a/content/replies/2021-06-08-16-50.md
+++ b/content/replies/2021-06-08-16-50.md
@@ -9,4 +9,6 @@ tweetUrl: ""
 tootUrl: ""
 date: 2021-06-08T16:49:48.950Z
 ---
- 
+Van het UWV schrik ik dan weer niet, dat er zo gereageerd wordt. Na die toeslagen affaire.
+
+Wat een wereld waar we in leven...
