--- a/content/replies/2021-06-08-16-50.md
+++ b/content/replies/2021-06-08-16-50.md
@@ -5,7 +5,7 @@ tags:
 title: Reply to
 url: https://twitter.com/petervangrieken/status/1402304819617058825?s=20
 silo: twitter
-tweetUrl: ""
+tweetUrl: "https://twitter.com/petergoes/status/1402331027314548736"
 tootUrl: ""
 date: 2021-06-08T16:49:48.950Z
 ---
