Allow for dutch content

--- a/content/replies/2021-06-08-15-18.md
+++ b/content/replies/2021-06-08-15-18.md
@@ -8,6 +8,7 @@ silo: twitter
 tweetUrl: "https://twitter.com/petergoes/status/1402284346225135630"
 tootUrl: ""
 date: 2021-06-08T15:18:16.878Z
+language: nl
 ---
 "Geïnterviewden geven aan dat ze genegeerd worden, neerbuigend worden toegesproken of weinig bereidheid ervaren tot het doen van aanpassingen"
 
