--- a/content/replies/2021-06-08-16-50.md
+++ b/content/replies/2021-06-08-16-50.md
@@ -8,6 +8,7 @@ silo: twitter
 tweetUrl: "https://twitter.com/petergoes/status/1402331027314548736"
 tootUrl: ""
 date: 2021-06-08T16:49:48.950Z
+language: nl
 ---
 Van het UWV schrik ik dan weer niet, dat er zo gereageerd wordt. Na die toeslagen affaire.
 
