--- a/content/notes/2021-06-09-08-33.md
+++ b/content/notes/2021-06-09-08-33.md
@@ -5,7 +5,7 @@ tags:
 title: Note
 language:
   - en
-tweetUrl: ""
+tweetUrl: "https://twitter.com/petergoes/status/1402544781889257475"
 tootUrl: ""
 date: 2021-06-09T08:33:20.093Z
 ---
