Update syndication urls

--- a/content/replies/2021-06-09-12-57.md
+++ b/content/replies/2021-06-09-12-57.md
@@ -7,7 +7,7 @@ url: https://twitter.com/zachleat/status/1402602407939424256?s=20
 silo: twitter
 language:
   - en
-tweetUrl: ""
+tweetUrl: "https://twitter.com/petergoes/status/1402611102270341122"
 tootUrl: ""
 date: 2021-06-09T12:57:08.690Z
 ---
