--- a/content/notes/2021-06-10-08-55.md
+++ b/content/notes/2021-06-10-08-55.md
@@ -5,7 +5,7 @@ tags:
 title: Note
 language:
   - en
-tweetUrl: ""
+tweetUrl: "https://twitter.com/petergoes/status/1402912720228392968"
 tootUrl: ""
 date: 2021-06-10T08:55:32.071Z
 ---
