Update syndication urls

--- a/content/replies/2021-06-10-15-57.md
+++ b/content/replies/2021-06-10-15-57.md
@@ -7,7 +7,7 @@ url: https://twitter.com/SaraSoueidan/status/1403009079572844544?s=20
 silo: twitter
 language:
   - en
-tweetUrl: ""
+tweetUrl: "https://twitter.com/petergoes/status/1403018668158636037"
 tootUrl: ""
 date: 2021-06-10T15:53:29.730Z
 ---
