Update syndication urls

--- a/content/replies/2021-06-10-18-39.md
+++ b/content/replies/2021-06-10-18-39.md
@@ -7,7 +7,7 @@ url: https://twitter.com/hdv/status/1403044977500897283?s=20
 silo: twitter
 language:
   - en
-tweetUrl: ""
+tweetUrl: "https://twitter.com/petergoes/status/1403059647511203847"
 tootUrl: ""
 date: 2021-06-10T18:39:24.199Z
 ---
