--- a/content/replies/2021-06-10-18-51.md
+++ b/content/replies/2021-06-10-18-51.md
@@ -7,7 +7,7 @@ url: https://twitter.com/SaraSoueidan/status/1403060665808527367?s=20
 silo: twitter
 language:
   - en
-tweetUrl: ""
+tweetUrl: "https://twitter.com/petergoes/status/1403062532353441797"
 tootUrl: ""
 date: 2021-06-10T18:50:50.467Z
 ---
