--- a/content/replies/2021-06-10-18-57.md
+++ b/content/replies/2021-06-10-18-57.md
@@ -7,7 +7,7 @@ url: https://twitter.com/SaraSoueidan/status/1403062715451592711?s=20
 silo: twitter
 language:
   - en
-tweetUrl: ""
+tweetUrl: "https://twitter.com/petergoes/status/1403064032274309131"
 tootUrl: ""
 date: 2021-06-10T18:55:32.383Z
 ---
