--- a/content/replies/2021-06-10-19-03.md
+++ b/content/replies/2021-06-10-19-03.md
@@ -7,7 +7,7 @@ url: https://twitter.com/SaraSoueidan/status/1403064422805950475?s=20
 silo: twitter
 language:
   - en
-tweetUrl: ""
+tweetUrl: "https://twitter.com/petergoes/status/1403065633990905860"
 tootUrl: ""
 date: 2021-06-10T19:03:17.198Z
 ---
