--- a/content/notes/2021-06-10-08-55.md
+++ b/content/notes/2021-06-10-08-55.md
@@ -6,7 +6,7 @@ title: Note
 language:
   - en
 tweetUrl: "https://twitter.com/petergoes/status/1402912720228392968"
-tootUrl: ""
+tootUrl: "https://toot.cafe/web/statuses/106387282636033585"
 date: 2021-06-10T08:55:32.071Z
 ---
 After 6 years I could order a new laptop today. I genuinely find it hard to justify spending so much money and bringing yet another electronic product into the world. 
