Update syndication link for https://www.petergoes.nl/notes/2021-06-10-22-17/

--- a/content/notes/2021-06-10-22-17.md
+++ b/content/notes/2021-06-10-22-17.md
@@ -5,7 +5,7 @@ tags:
 title: Note
 language:
   - en
-tweetUrl: ""
+tweetUrl: "https://twitter.com/petergoes/status/1403114381014089731"
 tootUrl: ""
 date: 2021-06-10T22:14:44.830Z
 ---
