Update syndication link for https://www.petergoes.nl/replies/2021-06-11-05-04/

--- a/content/replies/2021-06-11-05-04.md
+++ b/content/replies/2021-06-11-05-04.md
@@ -7,7 +7,7 @@ url: https://twitter.com/hdv/status/1403215700811038722?s=20
 silo: twitter
 language:
   - en
-tweetUrl: ""
+tweetUrl: "https://twitter.com/petergoes/status/1403216743674355712"
 tootUrl: ""
 date: 2021-06-11T05:02:02.104Z
 ---
