Update syndication link for https://www.petergoes.nl/replies/2021-06-11-05-11/

--- a/content/replies/2021-06-11-05-11.md
+++ b/content/replies/2021-06-11-05-11.md
@@ -7,7 +7,7 @@ url: https://twitter.com/madsstoumann/status/1403216646374924288?s=20
 silo: twitter
 language:
   - en
-tweetUrl: ""
+tweetUrl: "https://twitter.com/petergoes/status/1403218845222031360"
 tootUrl: ""
 date: 2021-06-11T05:11:24.690Z
 ---
