--- a/content/notes/2021-06-12-19-42.md
+++ b/content/notes/2021-06-12-19-42.md
@@ -5,7 +5,7 @@ tags:
 title: Note
 language:
   - en
-tweetUrl: ""
+tweetUrl: "https://twitter.com/petergoes/status/1403800095657693187"
 tootUrl: ""
 date: 2021-06-12T19:35:20.716Z
 ---
