--- a/content/replies/2021-06-17-04-36.md
+++ b/content/replies/2021-06-17-04-36.md
@@ -7,7 +7,7 @@ url: https://twitter.com/willnorris/status/1405323519739654147?s=20
 silo: twitter
 language:
   - en
-tweetUrl: ""
+tweetUrl: "https://twitter.com/petergoes/status/1405384068137619459"
 tootUrl: ""
 date: 2021-06-17T04:35:20.311Z
 ---
