--- a/content/replies/2021-06-17-06-29.md
+++ b/content/replies/2021-06-17-06-29.md
@@ -7,7 +7,7 @@ url: https://twitter.com/willnorris/status/1405405458601414666?s=20
 silo: twitter
 language:
   - en
-tweetUrl: ""
+tweetUrl: "https://twitter.com/petergoes/status/1405412659084865536"
 tootUrl: ""
 date: 2021-06-17T06:29:27.764Z
 ---
