--- a/content/replies/2021-06-17-09-25.md
+++ b/content/replies/2021-06-17-09-25.md
@@ -7,7 +7,7 @@ url: https://twitter.com/petergoes/status/1405257561943818247
 silo: twitter
 language:
   - en
-tweetUrl: ""
+tweetUrl: "https://twitter.com/petergoes/status/1405456835847536641"
 tootUrl: ""
 date: 2021-06-17T09:25:09.932Z
 ---
